[project]
name = "campsite-companion"
version = "0.1.0"
description = "Web app for searching camping availability across Recreation.gov and ReserveCalifornia"
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.3,<1",
    "langgraph>=0.4,<1",
    "langchain-anthropic>=0.3,<1",
    "langchain-openai>=0.3,<1",
    "langchain-google-genai>=2,<3",
    "langchain-xai>=0.2,<1",
    "geopy>=2.4,<3",
    "httpx>=0.27,<1",
    "playwright>=1.48,<2",
    "python-dotenv>=1.0,<2",
    "rich>=13,<14",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
]

[project.scripts]
camping-agent = "camping_agent.cli:main"
camping-web = "camping_agent.web.app:main"
build-catalog = "camping_agent.catalog:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
